--- a/presentations/_template/index.html
+++ b/presentations/_template/index.html
@@ -1,3 +1,9 @@
+<!--
+Copyright 2020 The original author and authors.
+
+This work is licensed under a Creative Commons Attribution 4.0 International License.
+See https://creativecommons.org/licenses/by/4.0/ for details.
+-->
 <!doctype html>
 <html>
 	<head>
