--- a/content/basics/overview/3_git.html
+++ b/content/basics/overview/3_git.html
@@ -1,6 +1,32 @@
+---
+---
 
+<h2>Example Git Graph</h2>
 
-<ul>
-  <li>Test 1</li>
-    <li>Test 2</li>
-</ul>
+<div id="graph-container"></div>
+
+<script>
+  // Get the graph container HTML element.
+  const graphContainer = document.getElementById("graph-container");
+
+  // Instantiate the graph.
+  const gitgraph = GitgraphJS.createGitgraph(graphContainer);
+
+  // Simulate git commands with Gitgraph API.
+  const master = gitgraph.branch("master");
+  master.commit("Initial commit");
+
+  const develop = master.branch("develop");
+  develop.commit("Add TypeScript");
+
+  const aFeature = develop.branch("a-feature");
+  aFeature
+    .commit("Make it work")
+    .commit("Make it right")
+    .commit("Make it fast");
+
+  develop.merge(aFeature);
+  develop.commit("Prepare v1");
+
+  master.merge(develop).tag("v1.0.0");
+</script>
